publishing awesome pages 1595293883561

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <body>
    <section class = "container">
    <div class = "half width">
-      <h1> welcome to < span class = "purple-color"> the elite squad</span> website  </h1>
+      <h1> welcome to the elite squad website  </h1>
       <h3> the place to get latest obms news  </h3>
    <p> you might see things about obms latest news resumption date nobody wants that mabye someone just make sure you are here it is the place to be </p>
        <a class="primary-btn" href="www.linkedin.com/in/jhankar/">  rate me </a
