publishing awesome pages 1595294383768

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <div class = "half width">
       <h1> welcome to the elite squad website  </h1>
       <h3> the place to get latest obms news  </h3>
-   <p> you might see things about obms latest news resumption date nobody wants that mabye someone just make sure you are here it is the place to be </p>
+   <p> you might see things about obms latest news resumption date nobody wants that mabye someone just make sure you are here it is the place to be and all youhaters fuck you latest news mofijin has a girlfriend meaning that she is gay latest news itiayo is getting famous on Instagram and follow him at gunner since birth reborn write your note and stay safe thank you </p>
        <a class="primary-btn" href="www.linkedin.com/in/jhankar/">  rate me </a
    </div> 
    <div class = "half width">
