publishing awesome pages 1595309304286

--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
-<html>
- <head></head>
- <body>
-  !DOCTYPE html&gt;   
-  <title> enirun </title>   
-  <h1>eniola is a stupid boy </h1> 
-  <p> Stephen is a fool </p> 
-  <h2> i have sense </h2> 
-  <h3> fuvk you </h3>  
+
+</html>
+  <title> elite squad</title>   
+  things going on in os all on elite squad website its the place to be you can find it all right on elite squad  latest news there is a probability that we might resume august and we might not do third term  .want football updates catch up on gunner since birth reborn for your latest updates on Instagram and dont forget to follow its football tv  . as usual akinbote is dry as ever use this lockdown as an opportunity to read and writeyour notes dont be lazy stay safe  </p>
+  <h2> if you have any questions that is your business so its been nice knowin
   <footer> 
-   <p class="programminghero">Learned and developed this site with <a href="http://www.programming-hero.com">Programming Hero</a></p> 
+   <p class = "mucheboxxxx@gmail.com"> read your books and write your note<a href="http://www.mucheboxx.com"> mucheboxxxx@gmail.com</a></p> 
   </footer>
  </body>
 </html>
